# tymoz

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml  deploy.yml
pkg/: package.json  tymoz.d.ts  tymoz.js  tymoz_bg.wasm.d.ts
src/: main.rs  time_zones.rs
ui/: appwindow.slint  city_list_popup.slint  data_adapter.slint  header.slint
ui/controls/: card.slint  gmt_offset.slint  grid_view.slint  icon_button.slint  labels.slint  theme.slint  theme_button.slint  time_format_toggle.slint  timezone_info.slint
