[package]
name = "tymoz"
version = "0.1.0"
authors = ["Arun PK"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = {  version = "1.6", features = ["serde"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[build-dependencies]
slint-build = "1.6"
