[package]
name = "tymoz"
version = "0.1.0"
authors = ["Arun PK"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = {  version = "1.6", features = ["serde"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
wasm-bindgen = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = "1.6"

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

